# python-api-template

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: .env  .env.local  Dockerfile  docker-entrypoint.sh  pyproject.toml
api/app/: main.py
api/app/db/connections/: base.py  postgres.py
api/app/db/engines/: __init__.py
api/app/graphql/: __init__.py
api/app/graphql/api/: api.py
api/app/graphql/api/auth/: api.py  schema.py  types.py
api/app/graphql/moodle/: api.py
api/app/graphql/moodle/auth/: api.py  schema.py  types.py
api/app/graphql/moodle/courses/: api.py  schema.py
api/app/models/: name.py
api/app/routes/v1/: hello.py
api/app/utils/: consts.py
api/database/migrations/: env.py
api/database/migrations/versions/: 88a60c6f480a_create_new_names_table.py
api/tests/database/connections/: test_base_connection.py  test_postgres_connection.py
api/tests/database/engines/: test_engine.py
api/tests/routes/v1/: test_hello_request_handler.py
infra/: cloudbuild.yaml
